# dummy_recommandation_system

./: Dockerfile  app.py  docker-compose.yml  pyproject.toml
src/notebooks/: tests.ipynb
src/reco_system/: dataset.py  metrics.py  train.py
templates/: index.html  result.html
